projet_calculatrice_cloud_native/kubernetes/03-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: johanu-marel
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: johanu-marel
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: johanu-marel
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: johanu-marel
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
