projet_calculatrice_cloud_native/kubernetes/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: johanu-marel
spec:
  ingressClassName: nginx
  rules:
    - host: calculatrice-johanu-marel-polytech-dijon.kiowy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
